@@ -3,3 +3,4 @@ classes=classes
 dist=dist
 openjumplib=${user.home}/prog/openjump/current
 lib=lib
+doc=doc
