@@ -11,6 +11,7 @@
     <tstamp/>
     <!-- Create the build directory structure used by compile -->
     <mkdir dir="${classes}"/>
+    <mkdir dir="${doc}"/>
     <!-- Copy rescources from src to classes -->
     <copy todir="${classes}">
         <fileset dir="${src}" casesensitive="no" defaultexcludes="yes">
@@ -25,7 +26,7 @@
         description="compile the source " >
     <!-- Compile the java code from ${src} into ${build} -->
     <javac srcdir="${src}" destdir="${classes}" debug="on">
-	    <classpath>
+       <classpath>
 		    <pathelement path="${classpath}"/>
             <fileset dir="${lib}">
                 <include name="**/*.jar"/>
@@ -47,10 +48,25 @@
         basedir="${classes}"/>
   </target>
 
+  <target name="javadoc" depends="init">
+    <javadoc sourcepath="${src}" destdir="${doc}">
+       <classpath>
+		    <pathelement path="${classpath}"/>
+            <fileset dir="${lib}">
+                <include name="**/*.jar"/>
+            </fileset>
+            <fileset dir="${openjumplib}">
+                <include name="**/*.jar"/>
+            </fileset>
+	    </classpath>
+    </javadoc>
+  </target>
+  
   <target name="clean"
         description="clean up" >
     <!-- Delete the ${build} and ${dist} directory trees -->     
     <delete dir="${classes}"/>
     <delete dir="${dist}"/>
+    <delete dir="${doc}"/>
   </target>
 </project>
